# Wings

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  wings.sln
.github/workflows/: cmake.yml
bindings/: wings.cs
dev/: CMakeLists.txt  builtinsmodule.cpp  common.h  executor.cpp  exprparse.cpp  parse.h  sysmodule.cpp  wings.cpp  wings.h
examples/cs_example/: Program.cs  cs_example.csproj  cs_example.sln
examples/cs_example/Properties/: launchSettings.json
header_and_source/: wings.cpp  wings.h
merged/: merge.py
merged/header_and_source/: wings.cpp  wings.h
merged/header_only/: wings.h
merged/single_header/: wings.h
scripts/: bindgen.py  cs_bindgen.py  merge.py
shared_lib/: CMakeLists.txt  export.cpp
shell/: CMakeLists.txt  main.cpp  shell.vcxproj
single_include/: wings.h
static_lib/: CMakeLists.txt
wings/: attributetable.cpp  attributetable.h  builtins.cpp  builtins.h  builtinsmodule.cpp  common.cpp  common.h  compile.cpp  compile.h  cpp.hint  dismodule.cpp  error.cpp  error.h  exception.cpp  executor.cpp  executor.h  exprparse.cpp  exprparse.h  gc.cpp  gc.h  hash.h  impl.h  lex.cpp  lex.h  lib.cpp  main.cpp  math.cpp  mathmodule.cpp  merge.py  osmodule.cpp  osmodule.h  parse.cpp  parse.h  random.cpp  randommodule.cpp  resource.h  sysmodule.cpp  testing.cpp  tests.cpp  timemodule.cpp  (+7 more)
